// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UninstallModal component should be rendered correctly (app uninstallable) 1`] = `
<Portal
  into="body"
>
  <Modal
    className="sto-modal--uninstall"
    closable={true}
    dismissAction={[MockFunction]}
    into="body"
    mobileFullscreen={true}
    overflowHidden={false}
    primaryType="regular"
    secondaryType="secondary"
    size="small"
    title="Uninstall this application"
  >
    <ModalContent>
      <ReactMarkdownWrapper
        source="This application is bound to be removed from your Cozy cozytest.mock.cc. Are you sure to __remove this application definitively__?"
      />
    </ModalContent>
    <ModalFooter
      className="sto-modal-controls"
    >
      <DefaultButton
        className="u-mh-half"
        extension="full"
        label="Cancel"
        onClick={[MockFunction]}
        theme="secondary"
      />
      <DefaultButton
        className="u-mh-half"
        disabled={false}
        extension="full"
        icon={[Function]}
        label="Uninstall"
        onClick={[Function]}
        theme="danger"
      />
    </ModalFooter>
  </Modal>
</Portal>
`;

exports[`UninstallModal component should handle correctly error from props 1`] = `
<Portal
  into="body"
>
  <Modal
    className="sto-modal--uninstall"
    closable={true}
    dismissAction={[MockFunction]}
    into="body"
    mobileFullscreen={true}
    overflowHidden={false}
    primaryType="regular"
    secondaryType="secondary"
    size="small"
    title="Uninstall this application"
  >
    <ModalContent>
      <ReactMarkdownWrapper
        source="This application is bound to be removed from your Cozy cozytest.mock.cc. Are you sure to __remove this application definitively__?"
      />
      <p
        className="u-error"
      >
        Something went wrong when uninstalling this application. Reason: This is a test error
      </p>
    </ModalContent>
    <ModalFooter
      className="sto-modal-controls"
    >
      <DefaultButton
        className="u-mh-half"
        extension="full"
        label="Cancel"
        onClick={[MockFunction]}
        theme="secondary"
      />
      <DefaultButton
        className="u-mh-half"
        disabled={false}
        extension="full"
        icon={[Function]}
        label="Uninstall"
        onClick={[Function]}
        theme="danger"
      />
    </ModalFooter>
  </Modal>
</Portal>
`;

exports[`UninstallModal component should handle correctly linked app error 1`] = `
<Portal
  into="body"
>
  <Modal
    className="sto-modal--uninstall"
    closable={true}
    dismissAction={[MockFunction]}
    into="body"
    mobileFullscreen={true}
    overflowHidden={false}
    primaryType="regular"
    secondaryType="secondary"
    size="small"
    title="Uninstall this application"
  >
    <ModalContent>
      <ReactMarkdownWrapper
        source="This application is bound to be removed from your Cozy cozytest.mock.cc. Are you sure to __remove this application definitively__?"
      />
      <p
        className="u-error"
      >
        A mobile application is linked to this application, it must be revoked to uninstall this application. To do this, you can go on
         
        <a
          className="u-c-pointer u-dodgerBlue"
          onClick={[Function]}
        >
          your page for managing connected devices
        </a>
        .
      </p>
    </ModalContent>
    <ModalFooter
      className="sto-modal-controls"
    >
      <DefaultButton
        className="u-mh-half"
        extension="full"
        label="Cancel"
        onClick={[MockFunction]}
        theme="secondary"
      />
      <DefaultButton
        className="u-mh-half"
        disabled={true}
        extension="full"
        icon={[Function]}
        label="Uninstall"
        onClick={[Function]}
        theme="danger"
      />
    </ModalFooter>
  </Modal>
</Portal>
`;
